--- a/helloWord.html
+++ b/helloWord.html
@@ -3,7 +3,9 @@
 	<title>GitHub</title>
 </head>
 <body>
+	<header>
 	<h1>Hola mundo</h1>
+	</header>	
 	<h2>trabajo colaborativo</h2>
 	<h3> modificación ejemplo </h3>
 </body>
