--- a/helloWord.html
+++ b/helloWord.html
@@ -8,5 +8,6 @@
 	</header>	
 	<h2>trabajo colaborativo</h2>
 	<h3> modificación ejemplo </h3>
+	<p>El miercoles a las 4 hay mejenga contra los de ingles</p>
 </body>
 </html>
