--- a/helloWord.html
+++ b/helloWord.html
@@ -9,5 +9,6 @@
 	<h2>trabajo colaborativo</h2>
 	<h3> modificación ejemplo </h3>
 	<p>El miercoles a las 4 hay mejenga contra los de ingles</p>
+	<p>Despues del partido vamos por las birras</p>
 </body>
 </html>
